#4552 Update dynamic index fields via the UI